[gd_scene load_steps=2 format=3 uid="uid://3dupa1eev3lp"]

[ext_resource type="Script" uid="uid://dskvjgo7wqd54" path="res://lobby.gd" id="1_ll2xe"]

[node name="Lobby" type="CanvasLayer"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ll2xe")

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0

[node name="HostButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Host Game"

[node name="JoinButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Join Game"

[node name="Label" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Current Players:"

[node name="VBoxContainer" type="VBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="Control/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="Control/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label4" type="Label" parent="Control/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0

[node name="StartButton" type="Button" parent="Control/VBoxContainer2"]
visible = false
layout_mode = 2
text = "START GAME"

[node name="ExitButton" type="Button" parent="Control/VBoxContainer2"]
layout_mode = 2
text = "EXIT GAME"
